Enhance blog features and homepage layout
- Updated package.json to include new dependencies: react-icons and shiki for syntax highlighting.
- Refactored MDXComponents to introduce CustomPre and improve code handling with syntax highlighting.
- Enhanced BlogPostPage to integrate Table of Contents, Related Posts, and Social Share components.
- Updated homepage layout to include HeroSection, TechStack, FeaturedProjects, and RecentPosts components for a cohesive design.
- Improved blog post metadata display and ensured responsive design across components.

All new features are functional and tested.

--- a/nextjs-site/content/blog/2010-11-20-install-rails3-on-ubuntu.mdx
+++ b/nextjs-site/content/blog/2010-11-20-install-rails3-on-ubuntu.mdx
@@ -16,7 +16,7 @@ Initially, install the necessary tools for our installation
 sudo apt-get install gcc g++ build-essential libssl-dev libreadline5-dev zlib1g-dev linux-headers-generic libsqlite3-dev
 ```
 
-Install Ruby 1.9.2 from Ruby version Manager (RVM). Official Rvm references available at [here](http://rvm.beginrescueend.com/). Make sure that curl and git installed (from above).
+Install Ruby 1.9.2 from Ruby version Manager (RVM). Official RVM references available at [rvm.io](https://rvm.io/). Make sure that curl and git installed (from above).
 
 ```bash
 bash < <( curl http://rvm.beginrescueend.com/releases/rvm-install-head )
