--- a/nextjs-site/content/blog/2011-06-20-use-haml.mdx
+++ b/nextjs-site/content/blog/2011-06-20-use-haml.mdx
@@ -21,7 +21,7 @@ gem install haml
 2. install from source
 
 ```bash
-git clone git://github.com/nex3/haml.git
+git clone https://github.com/haml/haml.git
 cd haml
 rake install
 ```
